clusters/beelink-talos/homepage/homepage-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-tailscale
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  ingressClassName: tailscale

  tls:
    - hosts:
        - homepage

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
